--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Roboto', sans-serif;
 }
 header{
     width: 1000px;
@@ -24,7 +25,7 @@ header{
 main{
     width: 1000px;
     margin-left: 220px;
-    margin-top:100px;
+    margin-top:50px;
  
 }
 
@@ -33,5 +34,87 @@ main{
     width: 300px;
     height: 80px;
     background-color: black;
+    float: left;
+    box-shadow:  3px  3px 2px #dedede,
+               -3px -3px 2px #dedede,
+                3px -3px 2px #dedede,
+               -3px  3px 2px #dedede;
+}
+
+.img-soggettoM{
+    background-image: url(../img/male1.png);
+    width: 30%;
+    height: 100%;
+    background-size: cover;
+    display: inline-block;
+    float: left;
+}
+
+.contenitore{
+    float: left;
+    color: white;
+    margin-left: 10px;
+
+}
+
+.email{
+    text-decoration: none;
+    margin: 7px;
+    color:rgb(123, 123, 255);
+    font-size: 13px;
+}
+
+.soggetto{
+    font-size: 15px;
+    margin: 7px;
+}
+
+.bio{
+    margin: 7px;
+    font-size: 13px;
+}
+
+.img-soggettoS{
+    background-image: url(../img/female1.png);
+    width: 30%;
+    height: 100%;
+    background-size: cover;
+    display: inline-block;
+    float: left;
+}
+
+.img-soggettoG{
+    background-image: url(../img/male2.png);
+    width: 30%;
+    height: 100%;
+    background-size: cover;
+    display: inline-block;
+    float: left;
+}
+
+.img-soggettoMI{
+    background-image: url(../img/female2.png);
+    width: 30%;
+    height: 100%;
+    background-size: cover;
+    display: inline-block;
+    float: left;
+}
+
+.img-soggettoR{
+    background-image: url(../img/male3.png);
+    width: 30%;
+    height: 100%;
+    background-size: cover;
+    display: inline-block;
+    float: left;
+}
+
+.img-soggettoD{
+    background-image: url(../img/female3.png);
+    width: 30%;
+    height: 100%;
+    background-size: cover;
+    display: inline-block;
     float: left;
 }
